# mcdu

./: Cargo.toml  README.md  resume.txt
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  coverage.yml  homebrew-update.yml  release-notes.yml  release.yml  security-audit.yml
crates/mcdu/: Cargo.toml
crates/mcdu-core/: Cargo.toml
crates/mcdu-core/src/: cleanup_ui.rs  config.rs  defaults.toml  executor.rs  git.rs  lib.rs  parallel.rs  platform.rs  quarantine.rs  rules.rs  scanner.rs
crates/mcdu-macos/: Cargo.toml
crates/mcdu-macos/src/: bundle.rs  installed.rs  lib.rs  orphans.rs
crates/mcdu-tui/: Cargo.toml
crates/mcdu-tui/src/: app.rs  cache.rs  changes.rs  cleanup_ui.rs  delete.rs  lib.rs  modal.rs  scan.rs  splash.rs  tree.rs  ui.rs
crates/mcdu/src/: main.rs
docs/: Guide.md
docs/plans/: 2026-01-04-cleanup-feature-design.md  2026-01-04-cleanup-implementation-plan.md
packaging/: build-sign-macos.sh  nfpm.yaml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/homebrew/: mcdu.rb
packaging/rpm/: mcdu.spec
scripts/: bump-version.sh  update-checksums.sh
src/: app.rs  changes.rs  delete.rs  main.rs  modal.rs  platform.rs  scan.rs  tree.rs  ui.rs
src/cleanup/: cleanup_ui.rs  cli.rs  config.rs  defaults.toml  executor.rs  git.rs  mod.rs  platform.rs  rules.rs  scanner.rs
