[package]
name = "mcdu"
version = "0.3.5"
edition = "2021"
description = "A modern disk usage analyzer with a terminal UI, inspired by ncdu"
license = "MIT"
repository = "https://github.com/mikalv/mcdu"
keywords = ["disk", "usage", "tui", "ncdu", "terminal"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
xattr = "1.0"
nix = { version = "0.30", features = ["process", "fs"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
glob = "0.3"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.24.0"
