[workspace]
resolver = "2"
members = ["crates/mcdu-core", "crates/mcdu-tui", "crates/mcdu"]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Mikal Villa <mikalv@hey.com>"]
license = "MIT"
repository = "https://github.com/mikalv/mcdu"
description = "A TUI disk usage analyzer and developer cleanup tool"
keywords = ["tui", "disk", "cleanup", "ncdu", "developer"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
# Internal crates
mcdu-core = { path = "crates/mcdu-core" }
mcdu-tui = { path = "crates/mcdu-tui" }

# Core dependencies (mcdu-core)
walkdir = "2"
glob = "0.3"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1"
dirs = "5.0"

# TUI dependencies (mcdu-tui)
ratatui = "0.29"
crossterm = "0.29"

# CLI dependencies (mcdu)
clap = { version = "4.5", features = ["derive"] }

# Dev dependencies
tempfile = "3"
