[workspace]
resolver = "2"
members = ["crates/mcdu-core", "crates/mcdu-macos", "crates/mcdu-tui", "crates/mcdu"]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Mikal Villa <mikalv@hey.com>"]
license = "MIT"
repository = "https://github.com/mikalv/mcdu"
description = "A TUI disk usage analyzer and developer cleanup tool"
keywords = ["tui", "disk", "cleanup", "ncdu", "developer"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
# Internal crates
mcdu-core = { version = "0.5.0", path = "crates/mcdu-core" }
mcdu-macos = { version = "0.5.0", path = "crates/mcdu-macos" }
mcdu-tui = { version = "0.5.0", path = "crates/mcdu-tui" }

# Core dependencies (mcdu-core)
walkdir = "2"
glob = "0.3"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1"
dirs = "6.0"

# TUI dependencies (mcdu-tui)
ratatui = "0.30"
crossterm = "0.29"
tachyonfx = "0.25"
tui-big-text = "0.8"

# CLI dependencies (mcdu)
clap = { version = "4.5", features = ["derive"] }

# Dev dependencies
tempfile = "3"
