[package]
name = "mcdu-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI components for mcdu - terminal UI rendering and state management"
keywords = ["tui", "ratatui", "terminal"]
categories = ["command-line-utilities"]

[features]
default = ["splash"]
splash = ["tachyonfx", "tui-big-text"]

[dependencies]
mcdu-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
thiserror.workspace = true
chrono = "0.4.43"
tui-piechart = "0.2.8"
tachyonfx = { workspace = true, optional = true }
tui-big-text = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
mcdu-macos.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
