[package]
name = "mcdu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["splash"]
splash = ["mcdu-tui/splash"]

[[bin]]
name = "mcdu"
path = "src/main.rs"

[dependencies]
mcdu-core.workspace = true
mcdu-tui.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mcdu-macos.workspace = true

[dev-dependencies]
tempfile.workspace = true
